Bug 1584377: Raise untrusted module processing thread priority to normal upon shutdown notification; r=mhowell

To ensure that we do not block shutdown while waiting on a low-priority
untrusted modules thread:

* We switch to using `THREAD_PRIORITY_IDLE` and `THREAD_PRIORITY_NORMAL`
  instead of `THREAD_MODE_BACKGROUND_BEGIN` and `THREAD_MODE_BACKGROUND_END`.
  This is necessary because the latter flags only work when settting priority
  on the current thread; they do not permit other threads to alter them.

* We add `BackgroundPriorityRegion::Clear` to normalize the specified thread's
  priority.

* We invoke `BackgroundPriorityRegion::Clear` on the untrusted modules thread
  as soon as we learn that we will be shutting down, thus boosting the thread's
  priority to normal.

Differential Revision: https://phabricator.services.mozilla.com/D47495